# tkitask

./: .env  .gitignore  README.md  pyproject.toml
dataset/: create_questions_table.py  populate_questions_table.py
tkitask/: app.py  create_db_engine.py  prompting.py  question.py
